samples/_failures_safe/1761447599_4eb404_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_fe5136a3.c: In function ‘main’:
./samples/SAFE/__tmp_fe5136a3.c:184:27: error: ‘TO’ undeclared (first use in this function)
  184 |         if (token.type == TO
      |                           ^~
./samples/SAFE/__tmp_fe5136a3.c:184:27: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_fe5136a3.c:184:29: error: expected ‘)’ at end of input
  184 |         if (token.type == TO
      |            ~                ^
      |                             )
./samples/SAFE/__tmp_fe5136a3.c:184:9: error: expected declaration or statement at end of input
  184 |         if (token.type == TO
      |         ^~
./samples/SAFE/__tmp_fe5136a3.c:184:9: error: expected declaration or statement at end of input
